--- a/DeltaUMLSdk/DeltaUMLSdk.csproj
+++ b/DeltaUMLSdk/DeltaUMLSdk.csproj
@@ -57,6 +57,7 @@
     <Compile Include="IComposite.cs" />
     <Compile Include="IdiagramCreationStrategi.cs" />
     <Compile Include="IDiagramDao.cs" />
+    <Compile Include="IMainControl.cs" />
     <Compile Include="INodeContextMenu.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UnSuportedOperationException.cs" />
